appId: com.margi.app
---
- launchApp
- tapOn: "Continue as Guest"
- tapOn: "ENTER DRIVE MODE"
- assertVisible: "Start Driving"
