appId: com.margi.app
---
- launchApp
- tapOn: "Continue as Guest"
- tapOn: "Home"
- assertVisible: "V "
