appId: com.margi.app
---
- launchApp
- tapOn: "Continue as Guest"
- tapOn: "Bystander QR"
- assertVisible: "Scan"
